# TestAction

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  backup.txt  cppcheck_report.txt  test_results.xml
.gitea/workflows/: blank.yml
.github/workflows/: blank.yml
include/: Vector.hpp
scripts/: local-ci.sh
tests/: CMakeLists.txt  test_vector.cpp
